@@ -2,6 +2,7 @@
 
 	* Major refactoring and change of classes to use TS options and simplify flexform. Dropped TV renderer.
 	* Renamed res/ to resources/
+	* Move some classes toward MVC model
 
 21-10-2008	Dmitry Dulepov	<dmitry@typo3.org>
 
